CHANGES

Trunk
	Specifying prefix for http://www.sdml.info/srcML/srcerr automatically turns on debugging
	same as --debug option.

	Don't include cpp namespace declaration for languages other than C or C++.

	Fix missing markup of exception handling for Java.

	Output prefixes on info.

	Change srcml2src namespace prefix flag to "prefix" instead of "namespace".

	Fix incorrect markup of anonymous Java classes.

	Check for non-unique namespace prefixes.

	Add option to src2srcml to allow for specification of namespace prefix.

	Add option to extract prefix of a namespace from srcml2src.

	Change --info option in srcml2src to use new multiple output options.

	Allow for multiple output (in order) of attributes.

	SIGINT handling for unit count.

	Fix help formatting error.

	Change cpp markup to text instead of textonly.

	Generate internal tokens for indexes.

	Change hidden --extended option to public --literal option.

	Move --xml-encoding to help section dealing with output srcML settings.

	Short flag for --extract-all in srcml2src has been changed from -e to -a.

	New status 16 for prematurely terminated input lists.

	For multiple input files, the first SIGINT signal lets the current file finish.
	Multiple SIGINT signals allows the default behavior.

	SIGUSR1 now toggles verbose setting.

	New call check mechanism.

	Allow specification of attributes on outer unit of compound srcML document, e.g.,
	directory, filename, version.

	Markup macro arguments.

	Markup macro name.

	Allow for access specifier on classes, e.g., private class A {}.

Trunk
	Default (in all cases) is now ISO-8859-1 for input format.  Changes default
	in libxml2 version.

	Fix wrong return code on expand in srcml2src.

	Add options --cpp_markup_if0 and --cpp_textonly_if0 for controlling whether
	cpp #else sections are parsed and marked up.  --cpp_textonly_if0 is default.

	Change option --cpp_nomark_else to --cpp_textonly_else and add --cpp_markup_else