@@ -110,8 +110,9 @@ srcMLOutput::srcMLOutput(TokenStream* ints,
   // "-" filename is standard output
   xout = xmlNewTextWriterFilename(srcml_filename, isoption(OPTION_COMPRESSED));
 
-  // issue the xml declaration
-  xmlTextWriterStartDocument(xout, XML_VERSION, xml_encoding, XML_DECLARATION_STANDALONE);
+  // issue the xml declaration, but only if we want to
+  if (isoption(OPTION_XMLDECL))
+    xmlTextWriterStartDocument(xout, XML_VERSION, xml_encoding, XML_DECLARATION_STANDALONE);
 }
 
 srcMLOutput::~srcMLOutput() {
