@@ -1,6 +1,8 @@
 CHANGES
 
 Trunk
+	Added option to turn off XML declaration.
+
 	Specifying prefix for http://www.sdml.info/srcML/srcerr automatically turns on debugging
 	same as --debug option.
 
